<resources>
    <string name="app_name">Taxi App Driver</string>
    <string name="Version_Code">1.0</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="google_maps_api_key">AIzaSyDUly0o7nRCYqMQ43CCHZix2DsFJPu-PcI</string>
    <string name="noti_channel_default">Primary Channel</string>
    <string name="noti_channel_second">Secondary Channel</string>

    <string name="text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.

The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</string>

    <string name="registration">Thank you for Registration. We will get back to you shortly !!!</string>
    <string name="Press_again_to_exit">Press again to exit</string>
    <!--<string name="joy_Driver">Joy Driver</string>-->
    <string name="accept_noti">Do you want to Accept?</string>
    <string name="reject_noti">Do you want to Reject?</string>
    <string name="payment_received">Payment Received Successfully</string>
    <string name="Trip_detail">Trip Detail</string>
    <string name="auto">Please auto start application to get updated.</string>
    <string name="Loading">Loading Please Wait...</string>
    <string name="Enter_Comment">Please Enter Comment</string>
    <string name="Rating_added">Rating Added Successfully !</string>
    <string name="Enter_mobile">Please Enter Mobile Number</string>
    <string name="Mobile_number">Enter Mobile Number Atleast 8 character</string>
    <string name="Personal">Personal</string>
    <string name="Car">Car</string>
    <string name="Banks">Banks</string>
    <string name="Dashboard">Dashboard</string>
    <string name="Earning">Earning</string>
    <string name="Subscription">Subscription</string>
    <string name="Fare_Setting">Fare Setting</string>
    <string name="Rating">Rating</string>
    <string name="Share_App">Share App</string>
    <string name="Legal">Legal</string>
    <string name="Logout">Logout</string>
    <string name="Offline">Offline</string>
    <string name="Online">Online</string>
    <string name="Enter_new_password">Please Enter New Password</string>
    <string name="Enter_password_valid">Please Enter Password Atleast 6 Character</string>
    <string name="Password_success">Your Password has been changed successfully !</string>
    <string name="Enter_otp">Please Enter OTP</string>
    <string name="Check_otp">Please Check OTP</string>
    <string name="Otp_successfully">OTP sent Successfully</string>
    <string name="password_reset">Password Reset Successfully</string>
    <string name="Location_not_found">Location Not Found Please Try Again</string>
    <string name="Enter_password">Please Enter Password</string>
    <string name="Enter_OLD_password">Please Enter Old Password</string>
    <string name="Invalid_Old_Password">Invalid Old Password</string>
    <string name="Do_you_want_delete">Do you want to Delete Your Account ?</string>
    <string name="Enter_first_name">Please Enter First name</string>
    <string name="Enter_Last_name">Please Enter Last name</string>
    <string name="Enter_Email_address">Please Enter Email Address</string>
    <string name="Enter_valid_email_address">Please Enter Valid Email Address</string>
    <string name="Could_not_find_path">Could not find the filepath of the selected file</string>
    <string name="Enter_confirm_password">Please Enter Confirm Password</string>
    <string name="Password_does_not_match">Password does not match</string>
    <string name="Mobile_no_already_exist">Mobile Number is already exist</string>
    <string name="Location_disabled">Location is Disabled Please Enable The Location</string>
    <string name="update_App">Please update App</string>
    <string name="Login_device_detected">Login To other Device Detected !</string>
    <string name="Enter_bank_name">Please Enter Bank Name</string>
    <string name="Enter_branch_name">Please Enter Branch Name</string>
    <string name="Enter_account_name">Please Enter Account Name</string>
    <string name="Enter_account_number">Please Enter Account Number</string>
    <string name="Select_Car_Type">Select Car Type</string>
    <string name="Please_select_car_type">Please Select Car Type</string>
    <string name="Enter_car_model">Please Enter Car Model</string>
    <string name="Enter_car_color">Please Enter Car Color</string>
    <string name="Enter_Resgistration_number">Please Enter Registration Number</string>
    <string name="Enter_rate">Please Enter Rate</string>
    <string name="Enter_valid_rate">Please Enter Valid Rate</string>
    <string name="You_can_not_add_fare">You can not add fare more than</string>
    <string name="Add_fare">Please Add fare</string>
    <string name="Enter_driving_license_no">Please Enter Driving License No</string>
    <string name="Enter_nric_no">Please Enter NRIC/FIN number</string>
    <string name="Choose_front_image">Please Choose Front of License</string>
    <string name="Choose_back_image">Please Choose Back of License</string>
    <string name="No_Rating_Found">No Rating Found</string>
    <string name="write_message">Write a message</string>
    <string name="Current_Trip">Current Trip</string>
    <string name="End_Trip">END TRIP</string>
    <string name="Enter_your_mobile">Enter Your Mobile</string>
    <string name="Next">NEXT</string>
    <string name="password">Enter Password</string>
    <string name="new_password">New Password</string>
    <string name="Enter">Enter</string>
    <string name="Enter_6_8_character">Enter 6-8 Character Password</string>
    <string name="Trip_Notification">Trip Notification</string>
    <string name="from">From</string>
    <string name="To">To</string>
    <string name="Accept">ACCEPT</string>
    <string name="Reject">REJECT</string>
    <string name="Enter_OTP_Code">Enter OTP Code</string>
    <string name="Resend_OTP_Code">Resend OTP Code?</string>
    <string name="Forgot_Password">Forgot Password?</string>
    <string name="Reset_Password">Reset Password</string>
    <string name="only_password">Password</string>
    <string name="Confirm_Password">Confirm Password</string>
    <string name="Submit">SUBMIT</string>
    <string name="OK">OK</string>
    <string name="Select_Image">Select Image</string>
    <string name="Camera">Camera</string>
    <string name="Gallery">Gallery</string>
    <string name="Bank_Name">Bank Name</string>
    <string name="Branch_Name">Branch Name</string>
    <string name="Account_Name">Account Name</string>
    <string name="Account_Number">Account Number</string>
    <string name="Car_Model">Car Model</string>
    <string name="Color">Color</string>
    <string name="Registration_Number">Registration Number</string>
    <string name="Confirm_Trip">Confirm Trip</string>
    <string name="Customer_Name">Customer Name</string>
    <string name="Fare_Detail">Fare Detail</string>
    <string name="Total_Fare">Total Fare</string>
    <string name="Coupon_Code">Coupon Code</string>
    <string name="Final_Fare">Final Fare</string>
    <string name="Start_Trip">START TRIP</string>
    <string name="Customer_Rating">Customer Rating</string>
    <string name="Comment">Comment</string>
    <string name="Payment">Payment</string>
    <string name="Cash_Collection">Cash Collection</string>
    <string name="Card_Payment">Card Payment</string>
    <string name="Final_Amount">Final Amount</string>
    <string name="Trips">Trips</string>
    <string name="Balance">Balance</string>
    <string name="Current_Per_KM_Rate">Current Per KM Rate</string>
    <string name="Last_Rate">Last Rate</string>
    <string name="First_Name">First Name</string>
    <string name="Last_Name">Last Name</string>
    <string name="Email_Id_optional">Email Id (Optional)</string>
    <string name="Driving_License_No">Driving License No</string>
    <string name="Front">Front</string>
    <string name="Back">Back</string>
    <string name="NRIC_FIN">NRIC/FIN</string>
    <string name="My_Profile">My Profile</string>
    <string name="Mobile">Mobile</string>
    <string name="Delete_My_Account">Delete My Account?</string>
    <string name="Update">Update</string>
    <string name="Total_Rating">Total Rating</string>
    <string name="Rating_Detail">Rating Detail</string>
    <string name="Total_Due">Total Due</string>
    <string name="Last_Subscription_On_payment">Last Subscription On payment</string>
    <string name="Total_Trip">Total Trip</string>
    <string name="Date">Date</string>
    <string name="Time">Time</string>
    <string name="Fare">Fare</string>
    <string name="Coupon_Rate">Coupon Rate</string>
    <string name="Cancel_Charges">Cancel Charges</string>
    <string name="Your_Earning">Your Earning</string>
    <string name="Waiting_Charge">Waiting Charge</string>
    <string name="Cancellation_Charges">Cancellation Charges</string>
    <string name="Pay_By">Pay By</string>
    <string name="In_Process">IN PROCESS</string>
    <string name="Reject_ride">Reject Ride</string>
    <string name="accept_ride">Accept Ride</string>
    <string name="No">NO</string>
    <string name="YES">YES</string>
    <string name="Write_us">Write us</string>
    <string name="This_Week">This Week</string>
    <string name="Settings">Settings</string>
    <string name="Cancel">CANCEL</string>
    <string name="English">English</string>
    <string name="Arabic">Arabic</string>
    <string name="Choose_language">Choose Language</string>
    <string name="only_loading">L O A D I N G ...</string>
    <string name="delete_ac">Delete Account</string>
    <string name="trip_payment">Trip Payment Received</string>
    <string name="trip_number">Trip Number</string>
    <string name="Sedan">Sedan</string>
    <string name="SUV">SUV</string>
    <string name="Mini">Mini</string>


</resources>
