<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="@dimen/_110dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/_20dp"
            android:layout_height="@dimen/_20dp"
            android:src="@drawable/personal" />

        <com.taxibookingdriver.Font.Tahoma
            android:id="@+id/tvtab1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_4dp"
            android:text="@string/Personal"
            android:textColor="@color/dark_text"
            android:textSize="@dimen/_13sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/_20dp"
            android:layout_height="@dimen/_20dp"
            android:src="@drawable/car_icon" />

        <com.taxibookingdriver.Font.Tahoma
            android:id="@+id/tvtab2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5dp"
            android:text="@string/Car"
            android:textColor="@color/dark_text"
            android:textSize="@dimen/_13sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/_20dp"
            android:layout_height="@dimen/_20dp"
            android:src="@drawable/bank" />

        <com.taxibookingdriver.Font.Tahoma
            android:id="@+id/tvtab3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5dp"
            android:text="@string/Banks"
            android:textColor="@color/dark_text"
            android:textSize="@dimen/_13sp" />


    </LinearLayout>
</LinearLayout>