<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@mipmap/registrationbg">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/whole"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".Activities.FirstScreen">

        <LinearLayout
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20dp"
            android:orientation="vertical">


            <ImageView
                android:layout_width="@dimen/_170dp"
                android:layout_height="@dimen/_120dp"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:src="@drawable/registration_car" />

            <com.taxibookingdriver.Font.Tahoma
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/logo"
                android:gravity="center"
                android:text="@string/password"
                android:textColor="@color/dark_text"
                android:textSize="@dimen/_18sp" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="@dimen/_80dp"
            android:layout_height="@dimen/_80dp"
            android:layout_gravity="center" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_marginTop="@dimen/_30dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_25dp"
                android:layout_marginRight="@dimen/_25dp">


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <EditText
                        android:id="@+id/et_pwd"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_toLeftOf="@+id/pwd_layout"
                        android:backgroundTint="@color/Black"
                        android:hint="@string/only_password"
                        android:inputType="textPassword"
                        android:maxLength="8"
                        android:paddingTop="@dimen/_3dp"
                        android:textColor="@color/dark_text"
                        android:textColorHint="@color/dark_text"
                        android:textSize="@dimen/_15sp" />


                </android.support.design.widget.TextInputLayout>


                <ImageView
                    android:layout_width="@dimen/_18dp"
                    android:layout_height="@dimen/_18dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="@dimen/_10dp"
                    android:src="@drawable/password" />

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_15dp">


                <com.taxibookingdriver.Font.Tahoma
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_10dp"
                    android:gravity="right"
                    android:textSize="@dimen/_13sp"
                    android:text="@string/Enter_6_8_character"
                    android:textColor="@color/dark_text"
                    android:textStyle="bold" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rr_pwd"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40dp"
                android:layout_marginBottom="@dimen/_25dp"
                android:layout_marginLeft="@dimen/_25dp"
                android:layout_marginRight="@dimen/_25dp"
                android:layout_marginTop="@dimen/_30dp"
                android:background="@drawable/button_background"
                android:clickable="true"
                android:elevation="@dimen/_10dp"
                android:foreground="?attr/selectableItemBackgroundBorderless">


                <com.taxibookingdriver.Font.Tahoma
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:gravity="center"
                    android:text="@string/Submit"
                    android:textColor="@color/White"
                    android:textSize="@dimen/_13sp" />


            </RelativeLayout>


        </LinearLayout>


    </LinearLayout>
</ScrollView>