<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10dp"
            android:layout_marginLeft="@dimen/_10dp"
            android:layout_marginRight="@dimen/_10dp"
            card_view:cardCornerRadius="@dimen/_5dp"
            card_view:cardElevation="@dimen/_10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/White"
                android:orientation="vertical">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10dp"
                    android:layout_marginRight="@dimen/_10dp"
                    android:layout_marginTop="@dimen/_10dp">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_bank_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                        <EditText
                            android:id="@+id/et_bank_name"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:backgroundTint="@color/Black"
                            android:hint="@string/Bank_Name"
                            android:inputType="text"
                            android:paddingTop="@dimen/_3dp"
                            android:textColor="@color/dark_text"
                            android:textColorHint="@color/dark_text"
                            android:textSize="@dimen/_13sp" />
                    </android.support.design.widget.TextInputLayout>


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10dp"
                    android:layout_marginRight="@dimen/_10dp"
                    android:layout_marginTop="@dimen/_10dp">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_branch_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                        <EditText
                            android:id="@+id/et_branch_name"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:backgroundTint="@color/Black"
                            android:hint="@string/Branch_Name"
                            android:inputType="text"
                            android:paddingTop="@dimen/_3dp"
                            android:textColor="@color/dark_text"
                            android:textColorHint="@color/dark_text"
                            android:textSize="@dimen/_13sp" />

                    </android.support.design.widget.TextInputLayout>


                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10dp"
                    android:layout_marginRight="@dimen/_10dp"
                    android:layout_marginTop="@dimen/_10dp">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_ac_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                        <EditText
                            android:id="@+id/et_account_name"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:backgroundTint="@color/Black"
                            android:hint="@string/Account_Name"
                            android:inputType="text"
                            android:paddingTop="@dimen/_3dp"
                            android:textColor="@color/dark_text"
                            android:textColorHint="@color/dark_text"
                            android:textSize="@dimen/_13sp"></EditText>
                    </android.support.design.widget.TextInputLayout>

                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10dp"
                    android:layout_marginRight="@dimen/_10dp"
                    android:layout_marginTop="@dimen/_10dp">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_ac_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                        <EditText
                            android:id="@+id/et_ac_num"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:backgroundTint="@color/Black"
                            android:hint="@string/Account_Number"
                            android:inputType="number"
                            android:paddingTop="@dimen/_3dp"
                            android:textColor="@color/dark_text"
                            android:textColorHint="@color/dark_text"
                            android:textSize="@dimen/_13sp" />

                    </android.support.design.widget.TextInputLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rr_bank"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginBottom="@dimen/_10dp"
                    android:layout_marginLeft="@dimen/_10dp"
                    android:layout_marginRight="@dimen/_10dp"
                    android:layout_marginTop="@dimen/_7dp"
                    android:background="@drawable/button_background"
                    android:clickable="true"
                    android:elevation="@dimen/_10dp"
                    android:foreground="?attr/selectableItemBackgroundBorderless">


                    <com.taxibookingdriver.Font.Tahoma
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_margin="@dimen/_5dp"
                        android:paddingBottom="@dimen/_5dp"
                        android:paddingLeft="@dimen/_20dp"
                        android:paddingRight="@dimen/_20dp"
                        android:paddingTop="@dimen/_5dp"
                        android:text="@string/Submit"
                        android:textColor="@color/White"
                        android:textSize="@dimen/_13sp" />
                </RelativeLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>


    </RelativeLayout>


</ScrollView>