<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/_10dp"
    android:layout_marginLeft="@dimen/_10dp"
    android:layout_marginRight="@dimen/_10dp"
    android:layout_marginTop="@dimen/_10dp"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10dp"
        android:layout_marginLeft="@dimen/_10dp"
        android:layout_marginRight="@dimen/_10dp"
        android:layout_marginTop="@dimen/_10dp"
        app:cardCornerRadius="@dimen/_3dp"
        app:cardElevation="@dimen/_7dp">

        <LinearLayout
            android:id="@+id/layoutBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/White"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_25dp"
                    android:layout_height="@dimen/_25dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_15dp"
                    android:src="@drawable/add_image" />

                <com.taxibookingdriver.Font.Tahoma
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="@dimen/_15dp"
                    android:text="@string/Select_Image"
                    android:textColor="@color/dark_text"
                    android:textSize="@dimen/_15sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/Black" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_25dp"
                    android:layout_height="@dimen/_25dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_15dp"
                    android:src="@drawable/image_gallery" />

                <com.taxibookingdriver.Font.Tahoma
                    android:id="@+id/txt_gallery"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_15dp"
                    android:text="@string/Gallery"
                    android:textColor="@color/dark_text"
                    android:textSize="@dimen/_15sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/Black" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_25dp"
                    android:layout_height="@dimen/_25dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_15dp"
                    android:src="@drawable/camera_image" />


                <com.taxibookingdriver.Font.Tahoma
                    android:id="@+id/txt_camera"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:padding="@dimen/_15dp"
                    android:text="@string/Camera"
                    android:textColor="@color/dark_text"
                    android:textSize="@dimen/_15sp" />

            </LinearLayout>


        </LinearLayout>
    </android.support.v7.widget.CardView>


</RelativeLayout>

